# cognitive-protocol-arch-market-service

./: DOMAIN_PRIMITIVES_PLAN.md  LICENSE  README.md  pyproject.toml  run_dashboard.py
docs/architecture/: domain-primitives.md  philosophy.md  typed-contexts.md
src/market/: __init__.py  config.py  enums.py
src/market/adapters/: __init__.py
src/market/adapters/coinbase/: __init__.py  book_manager.py  data.py  stream.py
src/market/analysis/: __init__.py  base.py  contexts.py  macd.py  models.py  momentum_indicators.py  pipeline.py  registry.py  stochastic.py  volume_analysis.py
src/market/connection/: __init__.py  resilient.py
src/market/domain/: __init__.py  analysis_primitives.py  primitives.py
src/market/model/: __init__.py  book.py  events.py  sequences.py  snapshot.py  status.py  ticker.py  trade.py  types.py
src/market/protocols/: __init__.py  market.py
src/market/service/: __init__.py  market_stream.py  models.py  technical_analysis.py
src/ui/: README.md  __init__.py  dashboard.py
tests/: README.md  conftest.py
tests/integration/app/market/: test_analysis_pipeline.py  test_volume_integration.py
tests/unit/app/market/: TESTING_STRATEGY.md  __init__.py  helpers.py  test_base_indicator.py  test_indicator_math_validation.py  test_macd_indicator.py  test_minimal_parsing.py  test_mock_websocket.py  test_order_book.py  test_rsi_analysis.py  test_technical_analysis_service.py  test_volume_analysis.py  test_with_builders.py
tests/unit/market/: test_analysis_primitives.py  test_primitives.py  test_ticker.py
